@@ -163,6 +163,20 @@ const isFXEvent = ( event = {} ) => {
 	);
 };
 
+/**
+ * Returns a boolean indicating whether only fee applied is the base fee
+ *
+ * @param {Object} event Event object
+ *
+ * @return {boolean} true if the only applied fee is the base fee
+ */
+const isBaseFeeOnly = ( event ) => {
+	if ( ! event.fee_rates ) return false;
+
+	const history = event.fee_rates.history;
+	return 1 === history?.length && 'base' === history[ 0 ].type;
+};
+
 const composeNetString = ( event ) => {
 	if ( ! isFXEvent( event ) ) {
 		return formatExplicitCurrency(
@@ -201,11 +215,13 @@ const composeFeeString = ( event ) => {
 	}
 
 	return sprintf(
-		/* translators: %1$s is the total fee amount, %2$f%% is the fee percentage, and %3$s is the fixed fee amount. */
-		__( 'Fee (%2$f%% + %3$s): %1$s', 'woocommerce-payments' ),
-		formatCurrency( -feeAmount, feeCurrency ),
+		'%1$s (%2$f%% + %3$s): %4$s',
+		isBaseFeeOnly( event )
+			? __( 'Base fee', 'woocommerce-payments' )
+			: __( 'Fee', 'woocommerce-payments' ),
 		formatFee( percentage ),
-		formatCurrency( fixed, fixedCurrency )
+		formatCurrency( fixed, fixedCurrency ),
+		formatCurrency( -feeAmount, feeCurrency )
 	);
 };
 
@@ -239,6 +255,11 @@ const composeFXString = ( event ) => {
  */
 const feeBreakdown = ( event ) => {
 	if ( ! event?.fee_rates?.history ) {
+		return;
+	}
+
+	// hide breakdown when there's only a base fee
+	if ( isBaseFeeOnly( event ) ) {
 		return;
 	}
 
@@ -330,7 +351,7 @@ const feeBreakdown = ( event ) => {
 		);
 	} );
 
-	return <ul className="fee-breakdown-list">{ feeHistoryList }</ul>;
+	return <ul className="fee-breakdown-list"> { feeHistoryList } </ul>;
 };
 
 /**
