@@ -502,6 +502,7 @@ Array [
       <ul
         className="fee-breakdown-list"
       >
+         
         <li>
           Base fee: 1.4% + £0.20
         </li>
@@ -527,7 +528,57 @@ Array [
             </li>
           </ul>
         </li>
+         
       </ul>,
+      "Net deposit: $59.50 USD",
+    ],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": "A payment of $63.00 USD was successfully charged.",
+    "icon": <t
+      className="is-success"
+      icon="checkmark"
+      size={24}
+    />,
+  },
+]
+`;
+
+exports[`mapTimelineEvents single currency events formats captured events with just the base fee 1`] = `
+Array [
+  Object {
+    "body": Array [],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": "Payment status changed to Paid.",
+    "icon": <t
+      className=""
+      icon="sync"
+      size={24}
+    />,
+  },
+  Object {
+    "body": Array [],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": <React.Fragment>
+      $59.50 USD was added to your 
+      <Link
+        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=dummy_po_5eaada696b281"
+        type="wc-admin"
+      >
+        Apr 2, 2020 deposit
+      </Link>
+      .
+    </React.Fragment>,
+    "icon": <t
+      className=""
+      icon="plus"
+      size={24}
+    />,
+  },
+  Object {
+    "body": Array [
+      undefined,
+      "Base fee (1.95% + $0.15): $-3.50",
+      undefined,
       "Net deposit: $59.50 USD",
     ],
     "date": 2020-04-01T14:37:54.000Z,
